--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
     <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
   </li>
 </ul>
+Hey everyone! Welcome to my page! My name is Emma Eggleston and I am a second year Computer Science student at Georgia Tech. I am passionate about building things and about film, so I am excited to see how I can incorporate the two in my career. 
 
+Check out the bio page if you want to learn more about me and feel free to contact me as well!
+
+The picture to the left is of my friend Kayla and I at our first Georgia Tech game as students. Go Jackets!
 <div class="MainContainer">
     </div>  
     <div id="MenuContainer">
