--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Hey everyone! Welcome to my page! <br><br> My name is Emma Eggleston and I am a 
 Check out the bio page if you want to learn more about me and feel free to contact me as well! <br>
 
 The picture to the left is of my friend Kayla and I at our first Georgia Tech game as students. Go Jackets!
-    <img src="emmakayla game.jpg";>
+    <img src="emmakayla game.jpg" alt="HTML5 Icon">
 <div class="MainContainer">
     </div>  
     <div id="MenuContainer">
