--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
   </li>
 </ul>
-Hey everyone! Welcome to my page! <br><br> My name is Emma Eggleston and I am a second year Computer Science student at Georgia Tech.<br>
-    I am passionate about building things and about film,<br> so I am excited to see how I can incorporate the two in my career.<br>
+Hey everyone! Welcome to my page! <br><br> My name is Emma Eggleston and I am a second year Computer Science student at Georgia Tech.<br><br>
+    I am passionate about building things and about film,<br> so I am excited to see how I can incorporate the two in my career.<br><br>
 
 Check out the bio page if you want to learn more about me and feel free to contact me as well! <br>
 
 The picture to the left is of my friend Kayla and I at our first Georgia Tech game as students. Go Jackets!
-    <img src="emmakayla game.jpg" alt="HTML5 Icon">
+    <img src="emmakayla.jpg" alt="HTML5 Icon">
 <div class="MainContainer">
     </div>  
     <div id="MenuContainer">
