--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Hey everyone! Welcome to my page! <br><br>
     Check out the bio page if you want to learn more about me and feel free to contact me as well! <br>
 
     The picture to the left is of my friend Kayla and I at our first Georgia Tech game as students. Go Jackets!
-    <img src="emmakayla.JPG" alt="HTML5 Icon">
+    <img src="emmakayla.jpg" width = "400" height = "400" alt="HTML5 Icon">
 <div class="MainContainer">
     </div>  
     <div id="MenuContainer">
