--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
   </li>
 </ul>
-<font size="+4">
+    <font size = "+3">
 Hey everyone! Welcome to my page! <br><br> 
     My name is Emma Eggleston and I am a second year Computer Science student at Georgia Tech.<br><br>
     I am passionate about building things and about film,<br> so I am excited to see how I can incorporate the two in my career.<br><br>
@@ -26,7 +26,7 @@ Hey everyone! Welcome to my page! <br><br>
     Check out the bio page if you want to learn more about me and feel free to contact me as well! <br>
 
     The picture to the left is of my friend Kayla and I at our first Georgia Tech game as students. Go Jackets!
- <\font>   
+    </font>
     <img src="emmakayla.jpg" width = "200" height = "200" alt="HTML5 Icon">
 <div class="MainContainer">
     </div>  
@@ -38,5 +38,5 @@ Hey everyone! Welcome to my page! <br><br>
         </ul>
     </div> 
 
-</body>
+     </body>
 </html>
