--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
   </li>
 </ul>
-    <font size = "+.75">
+    <font size = "+1">
 Hey everyone! Welcome to my page! <br><br> 
     My name is Emma Eggleston and I am a second year Computer Science student at Georgia Tech.<br><br>
     I am passionate about building things and about film,<br> so I am excited to see how I can incorporate the two in my career.<br><br>
@@ -27,7 +27,7 @@ Hey everyone! Welcome to my page! <br><br>
 
     The picture to the left is of my friend Kayla and I at our first Georgia Tech game as students. Go Jackets!
     </font>
-    <img src="emmakayla.jpg" width = "175" height = "175" alt="HTML5 Icon">
+    <img src="emmakayla.jpg" width = "200" height = "200" alt="HTML5 Icon">
 <div class="MainContainer">
     </div>  
     <div id="MenuContainer">
