--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
   </li>
 </ul>
+    <center>
     <font size = "+1">
 Hey everyone! Welcome to my page! <br><br> 
     My name is Emma Eggleston and I am a second year Computer Science student at Georgia Tech.<br><br>
@@ -25,9 +26,10 @@ Hey everyone! Welcome to my page! <br><br>
 
     Check out the bio page if you want to learn more about me and feel free to contact me as well! <br>
 
-    The picture to the left is of my friend Kayla and I at our first Georgia Tech game as students. Go Jackets!
-    </font>
+    The picture below is of my friend Kayla and I at our first Georgia Tech game as students. Go Jackets! <br>
+        </font>
     <img src="emmakayla.jpg" width = "200" height = "200" alt="HTML5 Icon">
+        </center>
 <div class="MainContainer">
     </div>  
     <div id="MenuContainer">
