--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </li>
 </ul>
 <center>
-<font size = "+2">
+<font size = "5">
     Hey everyone! Welcome to my page! <br><br> 
     My name is Emma Eggleston and I am a second year Computer Science student at Georgia Tech.<br><br>
     I am passionate about building things and about film,<br> so I am excited to see how I can incorporate the two in my career.<br><br>
