--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <font size = "4">
     Hey everyone! Welcome to my page! <br><br> 
     My name is Emma Eggleston and I am a second year Computer Science student at Georgia Tech.<br><br>
-    I am passionate about building things and about film,<br> so I am excited to see how I can incorporate the two in my career.<br><br>
+    I am passionate about building things and about film,<br> so I am excited to see how I can incorporate the two in my career.<br>
 
     Check out the bio page if you want to learn more about me and feel free to contact me as well! <br>
 
