--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     My name is Emma Eggleston and I am a second year Computer Science student at Georgia Tech.<br><br>
     I am passionate about building things and about film,<br> so I am excited to see how I can incorporate the two in my career.<br>
 
-    Check out the bio page if you want to learn more about me and feel free to contact me as well! <br>
+    Check out the <a href="about.html">about me</a> page if you want to learn more about me and feel free to contact me as well! <br>
 
     The picture below is of my friend Kayla and I at our first Georgia Tech game as students. Go Jackets! <br>
 </font>
