--- a/about.html
+++ b/about.html
@@ -18,7 +18,21 @@
     <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
   </li>
 </ul>
+	
+<center>
+<font size = "5">
+   My name is Emma Eggleston and I'm glad you are checking out my page! <br><br>
 
+I am currently at Georgia Tech studying Computer Science. I am also an Honors Program participant here at Georgia Tech. Previously, I was at Mill Creek High School where I graduated in Spring 2015.<br><br>
+
+I have a great family- my parents, my brother Noah who is also a student at Tech, and a very cute dog named Maverick.<br><br>
+
+I enjoy sewing which began with a need to sew pointe shoes, but now I also work on clothing such as skirts or dresses. I am also a pianist and a dancer. I have studied ballet, tap, and modern, but look forward to learning more at Tech!<br><br>
+~More stuff here~	
+</font>
+    <img src="combo.png" width = "845" height = "599" alt="HTML5 Icon">
+</center>
+	
 <div class="MainContainer">
     </div>  
     <div id="MenuContainer">
