--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,21 @@
     <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
   </li>
 </ul>
-
+<center>
+    See my LinkedIn and GitHub accounts here, as well as how to contact me via email!<br><br>
+    <a href="mailto:eeggleston3@gatech.edu" target="_blank">
+    <img src="gmail.png" alt="html5">
+    </a>
+    <a href="https://github.com/eeggleston3" target="_blank">
+    <img src="github.png" alt="html5">
+    </a>
+    <a href="https://www.linkedin.com/in/emma-eggleston-377132105" target="_blank">
+    <img src="linked.png" alt="html5">
+    </a><br><br>
+    For reference, my email is: eeggleston3@gatech.edu <br>
+    I hope to hear from you!
+</center>
+    
 <div class="MainContainer">
     </div>  
     <div id="MenuContainer">
