--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,7 @@
     <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
   </li>
 </ul>
+<font size = "5">    
 <center>
     See my LinkedIn and GitHub accounts here, as well as how to contact me via email!<br><br>
     <a href="mailto:eeggleston3@gatech.edu" target="_blank">
@@ -32,7 +33,7 @@
     For reference, my email is: eeggleston3@gatech.edu <br>
     I hope to hear from you!
 </center>
-    
+</font>    
 <div class="MainContainer">
     </div>  
     <div id="MenuContainer">
