--- a/contact.html
+++ b/contact.html
@@ -25,10 +25,10 @@
     <img src="gmail.png" alt="html5">
     </a>
     <a href="https://github.com/eeggleston3" target="_blank">
-    <img src="github.png" alt="html5">
+    <img src="github.png" width="200" height= "200" alt="html5">
     </a>
     <a href="https://www.linkedin.com/in/emma-eggleston-377132105" target="_blank">
-    <img src="linked.png" alt="html5">
+    <img src="linked.png" width="200" height= "200" alt="html5">
     </a><br><br>
     For reference, my email is: eeggleston3@gatech.edu <br>
     I hope to hear from you!
