--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
 <center>
     See my LinkedIn and GitHub accounts here, as well as how to contact me via email!<br><br>
     <a href="mailto:eeggleston3@gatech.edu" target="_blank">
-    <img src="gmail.png" alt="html5">
+    <img src="gmail.png" width = "274.58" height = "200" alt="html5">
     </a>
     <a href="https://github.com/eeggleston3" target="_blank">
     <img src="github.png" width="200" height= "200" alt="html5">
