--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
   <li><a href="index.html">Home</a></li>
   <li><a href="about.html">About Me</a></li>
   <li><a href="contact.html">Contact</a></li>
-  <li><a href="resume.html">Resume</a></li>
+  <li><a href="Emma Eggleston Resume.pdf">Resume</a></li>
   <li><a href="sample.html">Sample Works</a></li>
   <li class="icon">
     <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
