--- a/sample.html
+++ b/sample.html
@@ -18,7 +18,25 @@
     <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
   </li>
 </ul>
-
+<center>
+<font size = "5">
+	This first project is a platformer game I made with a few other students at Tech.<br>
+	Please note that the art is another student's, not mine!<br>
+	<img src = "pokecat1_orig.png" alt="HTML5 Icon">
+	<img src = "pokecat2_orig.png" alt="HTML5 Icon">
+	<img src = "pokecat3_orig.png" alt="HTML5 Icon"><br><br>
+	The following are two non-programming related projects, but I am passionate about them nonetheless.<br>
+	Film is one of my favorite hobbies, so I hope you enjoy!<br>
+	<iframe width="266.67" height="200"
+	src="https://www.youtube.com/watch?v=Q0k62MNGR-0&feature=youtu.be">
+	</iframe>
+	<iframe width="266.67" height="200"
+	src="https://www.youtube.com/watch?v=5TyumjNAVws&feature=youtu.be">
+	</iframe><br><br>
+	Between schoolwork and personal projects, I am constantly coding something new, <br>
+	so contact me if you want to see more of my work!
+</font>	
+</center>	
 <div class="MainContainer">
     </div>  
     <div id="MenuContainer">
