--- a/about.html
+++ b/about.html
@@ -25,12 +25,11 @@
 
 I am currently at Georgia Tech studying Computer Science. I am also an Honors Program participant here at Georgia Tech. Previously, I was at Mill Creek High School where I graduated in Spring 2015.<br><br>
 
-I have a great family- my parents, my brother Noah who is also a student at Tech, and a very cute dog named Maverick.<br><br>
+I have a great family- my parents, my brother Noah who is also a student at Tech, and a very cute dog named Maverick.<img src="combo.png" width = "338" height = "239.6" alt="HTML5 Icon"><br><br>
 
 I enjoy sewing which began with a need to sew pointe shoes, but now I also work on clothing such as skirts or dresses. I am also a pianist and a dancer. I have studied ballet, tap, and modern, but look forward to learning more at Tech!<br><br>
-~More stuff here~	
+	
 </font>
-    <img src="combo.png" width = "338" height = "239.6" alt="HTML5 Icon">
 </center>
 	
 <div class="MainContainer">
