--- a/about.html
+++ b/about.html
@@ -21,9 +21,9 @@
 	
 <center>
 <font size = "5">
-   My name is Emma Eggleston and I'm glad you are checking out my page! <br><br>
+   My name is Emma Eggleston and I'm glad you are checking out my page! 
 
-I am currently at Georgia Tech studying Computer Science. I am also an Honors Program participant here at Georgia Tech. Previously, I was at Mill Creek High School where I graduated in Spring 2015.<br><br>
+I am currently at Georgia Tech studying Computer Science. I am also an Honors Program participant here at Georgia Tech. Previously, I was at Mill Creek High School where I graduated in Spring 2015.
 
 I have a great family- my parents, my brother Noah who is also a student at Tech, and a very cute dog named Maverick.<img src="combo.png" width = "338" height = "239.6" alt="HTML5 Icon"><br><br>
 
