--- a/sample.html
+++ b/sample.html
@@ -33,8 +33,9 @@
 	<iframe width="266.67" height="200"
 	src="https://www.youtube.com/watch?v=5TyumjNAVws&feature=youtu.be">
 	</iframe><br><br>
+	A few classes have asked that students do not post code online, so contact me if you are interested in seeing some of my code.<br>
 	Between schoolwork and personal projects, I am constantly coding something new, <br>
-	so contact me if you want to see more of my work!<br><br><br>
+	so contact me if you want to see more!<br><br><br>
 </font>	
 </center>	
 <div class="MainContainer">
