--- a/about.html
+++ b/about.html
@@ -21,14 +21,18 @@
 	
 <center>
 <font size = "5">
-   My name is Emma Eggleston and I'm glad you are checking out my page! 
+   My name is Emma Eggleston and I'm glad you are checking out my page! <br>
 
 I am currently at Georgia Tech studying Computer Science. I am also an Honors Program participant here at Georgia Tech. Previously, I was at Mill Creek High School where I graduated in Spring 2015.
 
-I have a great family- my parents, my brother Noah who is also a student at Tech, and a very cute dog named Maverick.<img src="combo.png" width = "338" height = "239.6" alt="HTML5 Icon"><br><br>
+I have a great family- my parents, my brother Noah who is also a student at Tech, and a very cute dog named Maverick.<br><img src="combo.png" width = "338" height = "239.6" alt="HTML5 Icon"><br><br>
 
 I enjoy sewing which began with a need to sew pointe shoes, but now I also work on clothing such as skirts or dresses. I am also a pianist and a dancer. I have studied ballet, tap, and modern, but look forward to learning more at Tech!<br><br>
-	
+Interests:               Languages:                  Involvement:                  Goals:<br>
+Coding and Computers     Java, JavaFX                Student Alumni Association    Get an Internship <br>
+Film                     Python                      Mentor Jackets                Get a 3.5 GPA or higher<br>
+Dance                    HTML/CSS                    Board Game Club               Graduate from Tech <br>
+Piano	                 Javascript                                                Get a job in CS field<br>
 </font>
 </center>
 	
