--- a/about.html
+++ b/about.html
@@ -28,11 +28,11 @@ I am currently at Georgia Tech studying Computer Science. I am also an Honors Pr
 I have a great family- my parents, my brother Noah who is also a student at Tech, and a very cute dog named Maverick.<br><img src="combo.png" width = "338" height = "239.6" alt="HTML5 Icon"><br><br>
 
 I enjoy sewing which began with a need to sew pointe shoes, but now I also work on clothing such as skirts or dresses. I am also a pianist and a dancer. I have studied ballet, tap, and modern, but look forward to learning more at Tech!<br><br>
-Interests:               Languages:                  Involvement:                  Goals:<br>
-Coding and Computers     Java, JavaFX                Student Alumni Association    Get an Internship <br>
-Film                     Python                      Mentor Jackets                Get a 3.5 GPA or higher<br>
-Dance                    HTML/CSS                    Board Game Club               Graduate from Tech <br>
-Piano	                 Javascript                                                Get a job in CS field<br>
+Interests:&nbsp;&nbsp;&nbsp;&nbsp;Languages:&nbsp;&nbsp;&nbsp;&nbsp;Involvement:&nbsp;&nbsp;&nbsp;&nbsp;Goals:<br>
+Coding and Computers&nbsp;&nbsp;&nbsp;Java, JavaFX&nbsp;&nbsp;&nbsp;Student Alumni Association&nbsp;&nbsp;&nbsp;Get an Internship <br>
+Film&nbsp;&nbsp;&nbsp;&nbsp;Python&nbsp;&nbsp;&nbsp;&nbsp;Mentor Jackets&nbsp;&nbsp;&nbsp;&nbsp;Get a 3.5 GPA or higher<br>
+Dance&nbsp;&nbsp;&nbsp;&nbsp;HTML/CSS&nbsp;&nbsp;&nbsp;&nbsp;Board Game Club&nbsp;&nbsp;&nbsp;&nbsp;Graduate from Tech <br>
+Piano&nbsp;&nbsp;&nbsp;&nbsp;Javascript&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Get a job in CS field<br>
 </font>
 </center>
 	
