--- a/about.html
+++ b/about.html
@@ -58,9 +58,9 @@ I enjoy sewing which began with a need to sew pointe shoes, but now I also work 
 	</tr>
 </table>
 </font>
-<img src="piano.png" alt="HTML5 Icon">
-<img src="sew pointe.jpg" alt="HTML5 Icon">
-<img src="tap.jgp" alt="HTML5 Icon"><br><br><br>	
+<img src="piano.png" width="199.33" height="200" alt="HTML5 Icon">
+<img src="sew pointe.jpg" width="150" height="200" alt="HTML5 Icon">
+<img src="tap.jgp" width="149.17" height="200" alt="HTML5 Icon"><br><br><br>	
 </center>
 	
 <div class="MainContainer">
