--- a/sample.html
+++ b/sample.html
@@ -27,12 +27,8 @@
 	<img src = "pokecat3_orig.png" width="266.67" height="200" alt="HTML5 Icon"><br><br>
 	The following are two non-programming related projects, but I am passionate about them nonetheless.<br>
 	Film is one of my favorite hobbies, so I hope you enjoy!<br>
-	<iframe width="266.67" height="200"
-	src="https://www.youtube.com/watch?v=Q0k62MNGR-0&feature=youtu.be">
-	</iframe>
-	<iframe width="266.67" height="200"
-	src="https://www.youtube.com/watch?v=5TyumjNAVws&feature=youtu.be">
-	</iframe><br><br>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/Q0k62MNGR-0" frameborder="0" allowfullscreen></iframe>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/5TyumjNAVws" frameborder="0" allowfullscreen></iframe><br><br>
 	A few classes have asked that students do not post code online, so contact me if you are interested in seeing some of my code.<br>
 	Between schoolwork and personal projects, I am constantly coding something new, <br>
 	so contact me if you want to see more!<br><br><br>
