--- a/sample.html
+++ b/sample.html
@@ -29,10 +29,10 @@
 	Between schoolwork and personal projects, I am constantly coding something new, <br>
 	so contact me if you want to see more!<br><br>
 	The following are two non-programming related projects, but I am passionate about them nonetheless.<br>
-	Film is one of my favorite hobbies, so I hope you enjoy!<br>
+	Film is one of my favorite hobbies, so I hope you enjoy!<br><br>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/Q0k62MNGR-0" frameborder="0" allowfullscreen></iframe>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/5TyumjNAVws" frameborder="0" allowfullscreen></iframe><br><br>
-	<br><br><br>
+	<br><br>
 </font>	
 </center>	
 <div class="MainContainer">
