--- a/index.html
+++ b/index.html
@@ -18,18 +18,16 @@
     <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
   </li>
 </ul>
-<center>
-<font size = "5">
-    Hey everyone! Welcome to my page! <br><br> 
-    My name is Emma Eggleston and I am a second year Computer Science student at Georgia Tech.<br>
+    
+<div style="background-color: #f88699; margin-left: 20px; margin-right: 20px; padding-bottom: 8px; padding-left: 8px; padding-right: 8px; padding-top: 8px;">
+</a><b>Welcome!</b><br/>
+My name is Emma Eggleston and I am a second year Computer Science student at Georgia Tech.<br>
     I am passionate about building things and about film,<br> so I am excited to see how I can incorporate the two in my career.<br><br>
 
     Check out the <a href="about.html">about me</a> page if you want to learn more about me and feel free to contact me as well! <br>
-
-    The picture below is of my friend Kayla and I at our first Georgia Tech game as students. Go Jackets! <br>
-</font>
+    Go Jackets!
+</div>
     <img src="emmakayla.jpg" width = "200" height = "200" alt="HTML5 Icon">
-</center>
 <div class="MainContainer">
     </div>  
     <div id="MenuContainer">
