--- a/index.html
+++ b/index.html
@@ -19,15 +19,17 @@
   </li>
 </ul>
     
-<div style="background-color: #f88699; margin-left: 20px; margin-right: 20px; padding-bottom: 8px; padding-left: 8px; padding-right: 8px; padding-top: 8px;">
+<div id="container">
+  <div id="content" style="background-color: #f88699; margin-left: 20px; margin-right: 20px; padding-bottom: 8px; padding-left: 8px; padding-right: 8px; padding-top: 8px;">
 </a><b>Welcome!</b><br/>
 My name is Emma Eggleston and I am a second year Computer Science student at Georgia Tech.<br>
     I am passionate about building things and about film,<br> so I am excited to see how I can incorporate the two in my career.<br><br>
 
     Check out the <a href="about.html">about me</a> page if you want to learn more about me and feel free to contact me as well! <br>
-    Go Jackets!
+    Go Jackets!</div>
+   <div id="navbar"><img src="emmakayla.jpg" width = "200" height = "200" alt="HTML5 Icon"></div>
 </div>
-    <img src="emmakayla.jpg" width = "200" height = "200" alt="HTML5 Icon">
+    
 <div class="MainContainer">
     </div>  
     <div id="MenuContainer">
