--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ My name is Emma Eggleston and I am a second year Computer Science student at Geo
     Go Jackets!
     </font>
    </div>
+   <div id="navbar"><img src="Emma Myrtle Beach.jpg" width = "200" height = "200" alt="HTML5 Icon"></div>
    <div id="navbar"><img src="emmakayla.jpg" width = "200" height = "200" alt="HTML5 Icon"></div>
 </div>
     
