--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@ My name is Emma Eggleston and I am a second year Computer Science student at Geo
     Go Jackets!
     </font>
    </div>
-   <div id="navbar"><img src="Emma Myrtle Beach.jpg" width = "200" height = "200" alt="HTML5 Icon"></div>
-   <div id="navbar"><img src="emmakayla.jpg" width = "200" height = "200" alt="HTML5 Icon"></div>
+   <div id="navbar" align = "right"><img src="Emma Myrtle Beach.jpg" width = "200" height = "300" alt="HTML5 Icon"></div>
+   <div id="navbar" align = "right"><img src="emmakayla.jpg" width = "200" height = "200" alt="HTML5 Icon"></div>
 </div>
     
 <div class="MainContainer">
