--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@ My name is Emma Eggleston and I am a second year Computer Science student at Geo
     </font>
    </div>
    <div id="navbar" align = "right"><img src="Emma Myrtle Beach.jpg" width = "200" height = "300" alt="HTML5 Icon">
-   id="navbar" align = "right"><img src="emmakayla.jpg" width = "200" height = "200" alt="HTML5 Icon">
+   <div id="navbar" align = "right"> <img src="emmakayla.jpg" width = "200" height = "200" alt="HTML5 Icon">
 </div>
+    </div>    
     
 <div class="MainContainer">
     </div>  
