--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 </ul>
     
 <div id="container">
-    <br/><br/>
+    <br/>
     <p align ="left">
-  <div id="content" style="background-color: #f88699; margin-left: 0px; margin-right: 240px; padding-bottom: 8px; padding-left: 8px; padding-right: 0px; padding-top: 8px;">
+  <div id="content" style="background-color: #f88699; margin-left: 8px; margin-right: 240px; padding-bottom: 8px; padding-left: 5px; padding-right: 0px; padding-top: 8px;">
 <font size = "5">
       <b>Welcome!</b><br/>
 My name is Emma Eggleston and I am a second year Computer Science student at Georgia Tech.<br>
@@ -32,9 +32,9 @@ My name is Emma Eggleston and I am a second year Computer Science student at Geo
     Go Jackets!
     </font>
    </div>
-   <!-- <div id="navbar" align = "right"><img src="Emma Myrtle Beach.jpg" width = "200" height = "275" alt="HTML5 Icon"> 
+   <div id="navbar" align = "right"><img src="Emma Myrtle Beach.jpg" width = "200" height = "275" alt="HTML5 Icon"> 
    <div id="navbar" align = "right"> <img src="emmakayla.jpg" width = "200" height = "200" alt="HTML5 Icon"> 
-</div> -->
+</div>
     </div>    
     
 <div class="MainContainer">
