--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@ My name is Emma Eggleston and I am a second year Computer Science student at Geo
     Go Jackets!
     </font>
    </div>
-   <div id="navbar" align = "right" align = "middle"><img src="Emma Myrtle Beach.jpg" width = "200" height = "275" alt="HTML5 Icon"><br> 
-   <div id="navbar" align = "right" align = "middle"> <img src="emmakayla.jpg" width = "200" height = "200" alt="HTML5 Icon"> 
+   <div id="navbar" align = "right"; align = "middle"><img src="Emma Myrtle Beach.jpg" width = "200" height = "275" alt="HTML5 Icon"><br> 
+   <div id="navbar" align = "right"; align = "middle"> <img src="emmakayla.jpg" width = "200" height = "200" alt="HTML5 Icon"> 
 </div>
     </div>    
     
