--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@ My name is Emma Eggleston and I am a second year Computer Science student at Geo
     Go Jackets!
     </font>
    </div>
-   <div id="navbar" ><img src="Emma Myrtle Beach.jpg" width = "200" height = "275" alt="HTML5 Icon" align = "top"><br> 
-   <div id="navbar"> <img src="emmakayla.jpg" width = "200" height = "200" alt="HTML5 Icon" align = "right"> 
+   <div id="navbar" ><img src="Emma Myrtle Beach.jpg" width = "200" height = "275" alt="HTML5 Icon"><br> 
+   <div id="navbar"> <img src="emmakayla.jpg" width = "200" height = "200" alt="HTML5 Icon"> 
 </div>
     </div>    
     
