--- a/index.html
+++ b/index.html
@@ -32,10 +32,19 @@ My name is Emma Eggleston and I am a second year Computer Science student at Geo
     Go Jackets!
     </font>
    </div>
-   <div id="navbar" ><img src="Emma Myrtle Beach.jpg" width = "200" height = "275" alt="HTML5 Icon"><br> 
+    <table>
+        <th>
+            <img src="Emma Myrtle Beach.jpg" width = "200" height = "275" alt="HTML5 Icon">
+        </th>
+        <tr>
+            <td><img src="emmakayla.jpg" width = "200" height = "200" alt="HTML5 Icon">
+            </td>
+        </tr>
+    </table>
+   <!--<div id="navbar" stylepadding-bottom: ><img src="Emma Myrtle Beach.jpg" width = "200" height = "275" alt="HTML5 Icon"><br> 
    <div id="navbar"> <img src="emmakayla.jpg" width = "200" height = "200" alt="HTML5 Icon"> 
 </div>
-    </div>    
+    </div>    -->
     
 <div class="MainContainer">
     </div>  
