--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ My name is Emma Eggleston and I am a second year Computer Science student at Geo
     Go Jackets!
     </font>
    </div>
-    <table>
+    <table class = "pictures">
         <th>
             <img src="Emma Myrtle Beach.jpg" width = "200" height = "275" alt="HTML5 Icon">
         </th>
