--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <div id="container">
     <br/>
     <p align ="left">
-  <div id="content" style="background-color: #f88699; margin-left: 25px; margin-right: 175px; padding-bottom: 8px; padding-left: 8px; padding-right: 0px; padding-top: 8px;">
+  <div id="content" style="background-color: #fccfd6; margin-left: 25px; margin-right: 175px; padding-bottom: 8px; padding-left: 8px; padding-right: 0px; padding-top: 8px;">
 <font size = "5">
       <b>Welcome!</b><br/>
 My name is Emma Eggleston and I am a second year Computer Science student at Georgia Tech.<br>
