--- a/about.html
+++ b/about.html
@@ -18,17 +18,33 @@
     <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
   </li>
 </ul>
-	
-<center>
+
+<div id="container">
+    <br/>
+    <p align ="left">
+  <div id="content" style="background-color: #fccfd6; margin-left: 25px; margin-right: 175px; padding-bottom: 8px; padding-left: 8px; padding-right: 0px; padding-top: 8px;">
 <font size = "5">
-   My name is Emma Eggleston and I'm glad you are checking out my page! <br>
+      I'm glad you are checking out my page! <br>
 
 I am currently at Georgia Tech studying Computer Science. I am also an Honors Program participant here at Georgia Tech. Previously, I was at Mill Creek High School where I graduated in Spring 2015.
 
-I have a great family- my parents, my brother Noah who is also a student at Tech, and a very cute dog named Maverick.<br><img src="combo.png" width = "338" height = "239.6" alt="HTML5 Icon"><br><br>
-
-I enjoy sewing which began with a need to sew pointe shoes, but now I also work on clothing such as skirts or dresses. I am also a pianist and a dancer. I have studied ballet, tap, and modern, but look forward to learning more at Tech!<br><br><br><br>
-<table class = "about" style="width:100%">
+I have a great family- my parents, my brother Noah who is also a student at Tech, and a very cute dog named Maverick.
+    </font>
+   </div>
+    <table class = "pictures">
+        <th>
+            <img src="combo.png" width = "338" height = "239.6" alt="HTML5 Icon">
+        </th>
+    </table>
+    <br>
+	
+<font size = "5">
+<div id="content" style="background-color: #fccfd6; margin-left: 25px; margin-right: 175px; padding-bottom: 8px; padding-left: 8px; padding-right: 0px; padding-top: 8px;">
+<font size = "5">
+I enjoy sewing which began with a need to sew pointe shoes, but now I also work on clothing such as skirts or dresses. I am also a pianist and a dancer. I have studied ballet, tap, and modern, but look forward to learning more at Tech!<br><br><br><br>     
+    </font>
+   </div>
+<table class = "about" style="width:75%">
   <tr>
     <th>Interests:</th>
     <th>Languages:</th> 
@@ -61,11 +77,11 @@ I enjoy sewing which began with a need to sew pointe shoes, but now I also work 
 	</tr>
 </table>
 </font>
+<center>	
 <img src="sew pointe.jpg" width="150" height="200" alt="HTML5 Icon">
 <img src="piano.png" width="199.33" height="200" alt="HTML5 Icon">	
 <img src="tap.jpg" width="149.17" height="200" alt="HTML5 Icon"><br><br><br>	
 </center>
-	
 <div class="MainContainer">
     </div>  
     <div id="MenuContainer">
