--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 <font size = "5">
       I'm glad you are checking out my page! <br>
 
-I am currently at Georgia Tech studying Computer Science. I am also an Honors Program participant here at Georgia Tech. Previously, I was at Mill Creek High School where I graduated in Spring 2015.
+I am currently at Georgia Tech studying Computer Science.<br> I am also an Honors Program participant here at Georgia Tech.<br> Previously, I was at Mill Creek High School where I graduated in Spring 2015.<br>
 
 I have a great family- my parents, my brother Noah who is also a student at Tech, and a very cute dog named Maverick.
     </font>
@@ -41,10 +41,10 @@ I have a great family- my parents, my brother Noah who is also a student at Tech
 <font size = "5">
 <div id="content" style="background-color: #fccfd6; margin-left: 25px; margin-right: 175px; padding-bottom: 8px; padding-left: 8px; padding-right: 0px; padding-top: 8px;">
 <font size = "5">
-I enjoy sewing which began with a need to sew pointe shoes, but now I also work on clothing such as skirts or dresses. I am also a pianist and a dancer. I have studied ballet, tap, and modern, but look forward to learning more at Tech!<br><br><br><br>     
+I enjoy sewing which began with a need to sew pointe shoes,<br> but now I also work on clothing such as skirts or dresses.<br> I am also a pianist and a dancer. I have studied ballet, tap, and modern,<br> but look forward to learning more at Tech!<br><br><br><br>     
     </font>
    </div>
-<table class = "about" style="width:75%">
+<table class = "about" style="width:50%">
   <tr>
     <th>Interests:</th>
     <th>Languages:</th> 
