--- a/about.html
+++ b/about.html
@@ -22,25 +22,25 @@
 <div id="container">
     <br/>
     <p align ="left">
-  <div id="content" style="background-color: #fccfd6; margin-left: 25px; margin-right: 175px; padding-bottom: 8px; padding-left: 8px; padding-right: 0px; padding-top: 8px;">
+  <div id="content" style="background-color: #fccfd6; margin-left: 25px; margin-right: 175px; padding-bottom: 8px; padding-left: 0px; padding-right: 0px; padding-top: 8px;">
 <font size = "5">
 	<b>About Me</b> <br>
       I'm glad you are checking out my page! <br>
 
 I am currently at Georgia Tech studying Computer Science.<br> I am also an Honors Program participant here at Georgia Tech.<br> Previously, I was at Mill Creek High School where I graduated in Spring 2015.<br>
 
-I have a great family- my parents, my brother Noah who is also a student at Tech, and a very cute dog named Maverick.
-    </font>
+I have a great family- my parents, my brother Noah who is also a student at Tech,<br> and a very cute dog named Maverick.
+    </font>  
    </div>
+	<br>
     <table class = "pictures">
         <th>
-            <img src="combo.png" width = "253.5" height = "179.7" alt="HTML5 Icon">
+            <img src="combo.png" width = "286.455" height = "203.061" alt="HTML5 Icon">
         </th>
     </table>
-    <br>
 	
 <font size = "5">
-<div id="content" style="background-color: #fccfd6; margin-left: 25px; margin-right: 75px; padding-bottom: 8px; padding-left: 0px; padding-right: 0px; padding-top: 8px;">
+<div id="content" style="background-color: #fccfd6; margin-left: 25px; margin-right: 50px; padding-bottom: 8px; padding-left: 0px; padding-right: 0px; padding-top: 8px;">
 <font size = "5">
 I enjoy sewing which began with a need to sew pointe shoes,<br> but now I also work on clothing such as skirts or dresses.<br> I am also a pianist and a dancer. I have studied ballet, tap, and modern,<br> but look forward to learning more at Tech!     
     </font>
