--- a/about.html
+++ b/about.html
@@ -40,6 +40,9 @@ I have a great family- my parents, my brother Noah who is also a student at Tech
     </table>
 	
 <font size = "5">
+<div id="content" style="background-color: #C0C0C0>
+	<br>
+</div>
 	<br>
 <div id="content" style="background-color: #fccfd6; margin-left: 25px; margin-right: 50px; padding-bottom: 8px; padding-left: 8px; padding-right: 0px; padding-top: 8px;">
 <font size = "5">
