--- a/about.html
+++ b/about.html
@@ -39,11 +39,9 @@ I have a great family- my parents, my brother Noah who is also a student at Tech
         </th>
     </table>
 	
-<font size = "5">
-<div id="content" style="background-color: #C0C0C0>
+<div id="content" style="background-color: #C0C0C0; margin-left: 25px; margin-right: 175px; padding-bottom: 8px; padding-left: 8px; padding-right: 0px; padding-top: 8px;">
 	<br>
 </div>
-	<br>
 <div id="content" style="background-color: #fccfd6; margin-left: 25px; margin-right: 50px; padding-bottom: 8px; padding-left: 8px; padding-right: 0px; padding-top: 8px;">
 <font size = "5">
 I enjoy sewing which began with a need to sew pointe shoes,<br> but now I also work on clothing such as skirts or dresses.<br> I am also a pianist and a dancer. I have studied ballet, tap, and modern,<br> but look forward to learning more at Tech!     
