--- a/about.html
+++ b/about.html
@@ -35,12 +35,14 @@ I have a great family- my parents, my brother Noah who is also a student at Tech
 	<br>
     <table class = "pictures">
         <th>
-            <img src="combo.png" width = "286.455" height = "203.061" alt="HTML5 Icon">
+            <img src="combo.png" width = "300.77775" height = "213.21405" alt="HTML5 Icon">
         </th>
     </table>
 	
 <div id="content" style="background-color: #C0C0C0; margin-left: 25px; margin-right: 175px; padding-bottom: 8px; padding-left: 8px; padding-right: 0px; padding-top: 8px;">
+	<font size ="1">
 	<br>
+	</font>
 </div>
 <div id="content" style="background-color: #fccfd6; margin-left: 25px; margin-right: 50px; padding-bottom: 8px; padding-left: 8px; padding-right: 0px; padding-top: 8px;">
 <font size = "5">
