--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 <div id="container">
     <br/>
     <p align ="left">
-  <div id="content" style="background-color: #fccfd6; margin-left: 25px; margin-right: 175px; padding-bottom: 8px; padding-left: 8px; padding-right: 0px; padding-top: 8px;">
+  <div id="content" style="background-color: #fccfd6; margin-left: 25px; margin-right: 75px; padding-bottom: 8px; padding-left: 8px; padding-right: 0px; padding-top: 8px;">
 <font size = "5">
 	<b>About Me</b> <br>
       I'm glad you are checking out my page! <br>
@@ -40,7 +40,7 @@ I have a great family- my parents, my brother Noah who is also a student at Tech
     </table>
 	
 <div id="content" style="background-color: #C0C0C0; margin-left: 25px; margin-right: 175px; padding-bottom: 8px; padding-left: 8px; padding-right: 0px; padding-top: 8px;">
-	<font size ="1">
+	<font size =".25">
 	<br>
 	</font>
 </div>
@@ -49,7 +49,7 @@ I have a great family- my parents, my brother Noah who is also a student at Tech
 I enjoy sewing which began with a need to sew pointe shoes,<br> but now I also work on clothing such as skirts or dresses.<br> I am also a pianist and a dancer. I have studied ballet, tap, and modern,<br> but look forward to learning more at Tech!     
     </font>
    </div>
-<table class = "about" style="width:50%">
+<table class = "about" style="width:25%">
   <tr>
     <th>Interests:</th>
     <th>Languages:</th> 
@@ -81,7 +81,7 @@ I enjoy sewing which began with a need to sew pointe shoes,<br> but now I also w
 	  <td> </td>
 	</tr>
 </table>
-</font>
+	</font>
 <center>	
 <img src="sew pointe.jpg" width="150" height="200" alt="HTML5 Icon">
 <img src="piano.png" width="199.33" height="200" alt="HTML5 Icon">	
