--- a/about.html
+++ b/about.html
@@ -37,19 +37,8 @@ I have a great family- my parents, my brother Noah who is also a student at Tech
         <th>
             <img src="combo.png" width = "300.77775" height = "213.21405" alt="HTML5 Icon">
         </th>
-    </table>
-	
-<div id="content" style="background-color: #C0C0C0; margin-left: 25px; margin-right: 175px; padding-bottom: 8px; padding-left: 8px; padding-right: 0px; padding-top: 8px;">
-	<font size =".25">
-	<br>
-	</font>
-</div>
-<div id="content" style="background-color: #fccfd6; margin-left: 25px; margin-right: 50px; padding-bottom: 8px; padding-left: 8px; padding-right: 0px; padding-top: 8px;">
-<font size = "5">
-I enjoy sewing which began with a need to sew pointe shoes,<br> but now I also work on clothing such as skirts or dresses.<br> I am also a pianist and a dancer. I have studied ballet, tap, and modern,<br> but look forward to learning more at Tech!     
-    </font>
-   </div>
-<table class = "about" style="width:25%">
+	     <tr>
+            <td><table class = "about" style="width:25%">
   <tr>
     <th>Interests:</th>
     <th>Languages:</th> 
@@ -81,6 +70,20 @@ I enjoy sewing which began with a need to sew pointe shoes,<br> but now I also w
 	  <td> </td>
 	</tr>
 </table>
+            </td>
+        </tr>
+    </table>
+	
+<div id="content" style="background-color: #C0C0C0; margin-left: 25px; margin-right: 175px; padding-bottom: 8px; padding-left: 8px; padding-right: 0px; padding-top: 8px;">
+	<font size =".25">
+	<br>
+	</font>
+</div>
+<div id="content" style="background-color: #fccfd6; margin-left: 25px; margin-right: 50px; padding-bottom: 8px; padding-left: 8px; padding-right: 0px; padding-top: 8px;">
+<font size = "5">
+I enjoy sewing which began with a need to sew pointe shoes,<br> but now I also work on clothing such as skirts or dresses.<br> I am also a pianist and a dancer. I have studied ballet, tap, and modern,<br> but look forward to learning more at Tech!     
+    </font>
+   </div>
 	</font>
 <center>	
 <img src="sew pointe.jpg" width="150" height="200" alt="HTML5 Icon">
