--- a/about.html
+++ b/about.html
@@ -29,9 +29,9 @@
 
 I am currently at Georgia Tech studying Computer Science.<br> I am also an Honors Program participant here at Georgia Tech.<br> Previously, I was at Mill Creek High School where I graduated in Spring 2015.<br>
 
-I have a great family- my parents, my brother Noah who is also a student at Tech,<br> and a very cute dog named Maverick.
+I have a great family- my parents, my brother Noah who is also a student at Tech,<br> and a very cute dog named Maverick.<br>
     </font>  
-	  <div id="content" style="background-color: #C0C0C0; margin-left: 25px; margin-right: 175px; padding-bottom: 8px; padding-left: 8px; padding-right: 0px; padding-top: 8px;">
+	  <div id="content" style="background-color: #C0C0C0; margin-left: 25px; margin-right: 175px; padding-bottom: 0px; padding-left: 20px; padding-right: 20px; padding-top: 0px;">
 	<font size =".25">
 	<br>
 	</font>
@@ -46,7 +46,7 @@ I enjoy sewing which began with a need to sew pointe shoes,<br> but now I also w
             <img src="combo.png" width = "300.77775" height = "213.21405" alt="HTML5 Icon">
         </th>
 	     <tr>
-            <td><table class = "about" style="width:25%">
+            <td><table class = "about" style="width:40%">
   <tr>
     <th>Interests:</th>
     <th>Languages:</th> 
