--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@ I am currently at Georgia Tech studying Computer Science.<br> I am also an Honor
 
 I have a great family- my parents, my brother Noah who is also a student at Tech,<br> and a very cute dog named Maverick.<br>
     </font>  
-	  <div id="content" style="background-color: #C0C0C0; margin-left: 25px; margin-right: 175px; padding-bottom: 0px; padding-left: 100px; padding-right: 240px; padding-top: 0px;">
+	  <div id="content" style="background-color: #C0C0C0; margin-left: 25px; margin-right: 175px; padding-bottom: 0px; padding-left: 125px; padding-right: 240px; padding-top: 0px;">
 	<font size =".25">
 	<br>
 	</font>
@@ -45,7 +45,7 @@ I enjoy sewing which began with a need to sew pointe shoes,<br> but now I also w
             <img src="combo.png" width = "300.77775" height = "213.21405" alt="HTML5 Icon">
         </th>
 	     <tr>
-            <td><table class = "about" style="width:45%">
+            <td><table class = "about" style="width:55%">
   <tr>
     <th>Interests:</th>
     <th>Languages:</th> 
@@ -61,7 +61,7 @@ I enjoy sewing which began with a need to sew pointe shoes,<br> but now I also w
   <tr>
     <td>Film</td>
     <td>Python</td> 
-    <td>Get a 3.5 GPA or higher</td>
+    <td>3.5 GPA or higher</td>
     <td>Mentor Jackets</td>	  
   </tr>
   <tr>
