--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@ I enjoy sewing which began with a need to sew pointe shoes,<br> but now I also w
             <img src="combo.png" width = "300.77775" height = "213.21405" alt="HTML5 Icon">
         </th>
 	     <tr>
-            <td><table class = "about" style="width:66%">
+            <td> "    "<table class = "about" style="width:66%">
   <tr>
     <th>Interests:</th>
     <th>Languages:</th> 
