--- a/about.html
+++ b/about.html
@@ -45,38 +45,38 @@ I enjoy sewing which began with a need to sew pointe shoes,<br> but now I also w
             <img src="combo.png" width = "300.77775" height = "213.21405" alt="HTML5 Icon">
         </th>
 	     <tr>
-            <td> "    "<table class = "about" style="width:66%">
-  <tr>
-    <th>Interests:</th>
-    <th>Languages:</th> 
-    <th>Goals:</th>
-	  <th>Involvement:</th>  
-  </tr>
-  <tr>
-    <td>Coding and Computers</td>
-    <td>Java, JavaFX</td> 
-    <td>Get an Internship</td>
-    <td>Student Alumni Association</td>  
-  </tr>
-  <tr>
-    <td>Film</td>
-    <td>Python</td> 
-    <td>3.5 GPA or higher</td>
-    <td>Mentor Jackets</td>	  
-  </tr>
-  <tr>
-	  <td>Dance</td>
-	  <td>HTML/CSS</td>
-	  <td>Get a job in CS field</td>
-	  <td></td>
-	</tr>
-  <tr>
-	  <td>Piano</td>
-	  <td>Javascript</td>
-	  <td> </td>
-	  <td> </td>
-	</tr>
-</table>
+            <td> <table class = "about" style="width:66%">
+	  <tr>
+	    <th>Interests:</th>
+	    <th>Languages:</th> 
+	    <th>Goals:</th>
+		  <th>Involvement:</th>  
+	  </tr>
+	  <tr>
+	    <td>Coding and Computers</td>
+	    <td>Java, JavaFX</td> 
+	    <td>Get an Internship</td>
+	    <td>Student Alumni Association</td>  
+	  </tr>
+	  <tr>
+	    <td>Film</td>
+	    <td>Python</td> 
+	    <td>3.5 GPA or higher</td>
+	    <td>Mentor Jackets</td>	  
+	  </tr>
+	  <tr>
+		  <td>Dance</td>
+		  <td>HTML/CSS</td>
+		  <td>Get a job in CS field</td>
+		  <td></td>
+		</tr>
+	  <tr>
+		  <td>Piano</td>
+		  <td>Javascript</td>
+		  <td> </td>
+		  <td> </td>
+		</tr>
+	</table>
             </td>
         </tr>
     </table>
