--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@ I am currently at Georgia Tech studying Computer Science.<br> I am also an Honor
 
 I have a great family- my parents, my brother Noah who is also a student at Tech,<br> and a very cute dog named Maverick.<br>
     </font>  
-	  <div id="content" style="background-color: #C0C0C0; margin-left: -10px; margin-right: 0px; padding-bottom: 0px; padding-left: 1px; padding-right: 300px; padding-top: 0px;">
+	  <div id="content" style="background-color: #C0C0C0; margin-left: -20px; margin-right: 0px; padding-bottom: 0px; padding-left: 1px; padding-right: 375px; padding-top: 0px;">
 	<font size =".25">
 	<br>
 	</font>
@@ -45,7 +45,7 @@ I enjoy sewing which began with a need to sew pointe shoes,<br> but now I also w
             <img src="combo.png" width = "300.77775" height = "213.21405" alt="HTML5 Icon">
         </th>
 	     <tr>
-            <td> <table class = "about" style="width:66%">
+            <td align="middle"> <table class = "about" style="width:66%">
 	  <tr>
 	    <th>Interests:</th>
 	    <th>Languages:</th> 
