--- a/contact.html
+++ b/contact.html
@@ -18,9 +18,15 @@
     <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
   </li>
 </ul>
+    
+    <div id="content" style="background-color: #fccfd6; margin-left: 25px; margin-right: 175px; padding-bottom: 8px; padding-left: 8px; padding-right: 0px; padding-top: 8px;">
+<font size = "5">
+      See my LinkedIn and GitHub accounts here, as well as how to contact me via email!
+    </font>
+   </div>
+    <br><br>
 <font size = "5">    
 <center>
-    See my LinkedIn and GitHub accounts here, as well as how to contact me via email!<br><br>
     <a href="mailto:eeggleston3@gatech.edu" target="_blank">
     <img src="gmail.png" width = "274.58" height = "200" alt="html5">
     </a>
@@ -30,8 +36,12 @@
     <a href="https://www.linkedin.com/in/emma-eggleston-377132105" target="_blank">
     <img src="linked.png" width="200" height= "200" alt="html5">
     </a><br><br>
-    For reference, my email is: eeggleston3@gatech.edu <br>
+     <div id="content" style="background-color: #fccfd6; margin-left: 25px; margin-right: 175px; padding-bottom: 8px; padding-left: 8px; padding-right: 0px; padding-top: 8px;">
+<font size = "5">
+      For reference, my email is: eeggleston3@gatech.edu <br>
     I hope to hear from you!
+    </font>
+   </div>
 </center>
 </font>    
 <div class="MainContainer">
