--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,9 @@
   </li>
 </ul>
     <center>
+        <font size = ".25">
+        <br>
+        </font>
     <div id="content3" style="background-color: #fccfd6; margin-left: 25px; margin-right: 25px; padding-bottom: 8px; padding-left: 8px; padding-right: 8px; padding-top: 8px;">
 <font size = "5">
       See my LinkedIn and GitHub accounts here, as well as how to contact me via email!
