--- a/index.html
+++ b/index.html
@@ -36,10 +36,9 @@ My name is Emma Eggleston and I am a second year Computer Science student at Geo
         <th>
             <img src="Emma Myrtle Beach.jpg" width = "200" height = "275" alt="HTML5 Icon">
         </th>
-        <tr>
-            <td><img src="emmakayla.jpg" width = "200" height = "200" alt="HTML5 Icon">
+           <!-- <td><img src="emmakayla.jpg" width = "200" height = "200" alt="HTML5 Icon"> 
             </td>
-        </tr>
+        </tr> -->
     </table>
     <br>
  
