--- a/sample.html
+++ b/sample.html
@@ -18,18 +18,35 @@
     <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
   </li>
 </ul>
-<center>
+	<center>
+	<div id="content" style="background-color: #fccfd6; margin-left: 25px; margin-right: 25px; padding-bottom: 8px; padding-left: 8px; padding-right: 8px; padding-top: 8px;">
 <font size = "5">
-	This first project is a platformer game I made with a few other students at Tech.<br>
-	Please note that the art is another student's, not mine!<br>
+      This first project is a platformer game I made with a few other students at Tech.<br>
+	Please note that the art is another student's, not mine!
+    </font>
+   </div>
+	
+
+<font size = "5">
+	<br>
 	<img src = "pokecat1_orig.png" width="266.67" height="200" alt="HTML5 Icon">
 	<img src = "pokecat2_orig.png" width="266.67" height="200" alt="HTML5 Icon">
 	<img src = "pokecat3_orig.png" width="266.67" height="200" alt="HTML5 Icon"><br>
-	A few classes have asked that students do not post code online, so contact me if you are interested in seeing some of my code.<br>
+	<div id="content" style="background-color: #fccfd6; margin-left: 25px; margin-right: 25px; padding-bottom: 8px; padding-left: 8px; padding-right: 8px; padding-top: 8px;">
+<font size = "5">
+      A few classes have asked that students do not post code online, so contact me if you are interested in seeing some of my code.<br>
 	Between schoolwork and personal projects, I am constantly coding something new, <br>
-	so contact me if you want to see more!<br><br>
-	The following are two non-programming related projects, but I am passionate about them nonetheless.<br>
-	Film is one of my favorite hobbies, so I hope you enjoy!<br><br>
+	so contact me if you want to see more!
+    </font>
+   </div>
+	<br><br>
+	<div id="content" style="background-color: #fccfd6; margin-left: 25px; margin-right: 25px; padding-bottom: 8px; padding-left: 8px; padding-right: 8px; padding-top: 8px;">
+<font size = "5">
+      The following are two non-programming related projects, but I am passionate about them nonetheless.<br>
+	Film is one of my favorite hobbies, so I hope you enjoy!
+    </font>
+   </div>
+	<br><br>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/Q0k62MNGR-0" frameborder="0" allowfullscreen></iframe>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/5TyumjNAVws" frameborder="0" allowfullscreen></iframe><br><br>
 	<br><br>
