--- a/sample.html
+++ b/sample.html
@@ -21,17 +21,21 @@
 	<center>
 	<div id="content" style="background-color: #fccfd6; margin-left: 25px; margin-right: 25px; padding-bottom: 8px; padding-left: 8px; padding-right: 8px; padding-top: 8px;">
 <font size = "5">
-      This first project is a platformer game I made with a few other students at Tech.<br>
+      This first project is a side-scroller game I made with a few other students at Tech.<br>
 	Please note that the art is another student's, not mine!
     </font>
    </div>
-	
-
-<font size = "5">
-	<br>
-	<img src = "pokecat1_orig.png" width="266.67" height="200" alt="HTML5 Icon">
-	<img src = "pokecat2_orig.png" width="266.67" height="200" alt="HTML5 Icon">
-	<img src = "pokecat3_orig.png" width="266.67" height="200" alt="HTML5 Icon"><br>
+	<table class = "pictures">
+        <th>
+            <img src = "pokecat1_orig.png" width="266.67" height="200" alt="HTML5 Icon">
+        </th>
+           <td> <img src = "pokecat2_orig.png" width="266.67" height="200" alt="HTML5 Icon">
+            </td>
+		<td> <img src = "pokecat3_orig.png" width="266.67" height="200" alt="HTML5 Icon">
+		</td>
+        </tr>
+	</table>
+    <br>
 	<div id="content" style="background-color: #fccfd6; margin-left: 25px; margin-right: 25px; padding-bottom: 8px; padding-left: 8px; padding-right: 8px; padding-top: 8px;">
 <font size = "5">
       A few classes have asked that students do not post code online, so contact me if you are interested in seeing some of my code.<br>
