--- a/sample.html
+++ b/sample.html
@@ -18,23 +18,23 @@
     <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
   </li>
 </ul>
-	<div id="content" style="background-color: #fccfd6; margin-left: 0px; margin-right: 0px; padding-bottom: 8px; padding-left: 8px; padding-right: 8px; padding-top: 8px;">
+	<div id="content" style="background-color: #fccfd6; margin-left: 10px; margin-right: 0px; padding-bottom: 8px; padding-left: 8px; padding-right: 0px; padding-top: 8px;">
 <font size = "5">
       This first project is a side-scroller game I made with a few other students at Tech.<br>
 	Please note that the art is another student's, not mine!
     </font>
    </div>
 	<table class = "pictures">
-        <th>
+        <th style="align": right>
             <img src = "pokecat1_orig.png" width="266.67" height="200" alt="HTML5 Icon">
         </th>
-           <td> <img src = "pokecat2_orig.png" width="266.67" height="200" alt="HTML5 Icon">
+           <td style= "align": right> <img src = "pokecat2_orig.png" width="266.67" height="200" alt="HTML5 Icon">
             </td>
-		<td> <img src = "pokecat3_orig.png" width="266.67" height="200" alt="HTML5 Icon">
+		<td style= "align": right> <img src = "pokecat3_orig.png" width="266.67" height="200" alt="HTML5 Icon">
 		</td>
 	</table>
     <br>
-	<div id="content" style="background-color: #fccfd6; margin-left: 3px; margin-right: 0px; padding-bottom: 8px; padding-left: 8px; padding-right: 8px; padding-top: 8px;">
+	<div id="content" style="background-color: #fccfd6; margin-left: 10px; margin-right: 0px; padding-bottom: 8px; padding-left: 8px; padding-right: 8px; padding-top: 8px;">
 <font size = "5">
       A few classes have asked that students do not post code online, so contact me if you are interested in seeing some of my code.<br>
 	Between schoolwork and personal projects, I am constantly coding something new, <br>
@@ -42,6 +42,7 @@
     </font>
    </div>
 	<br><br>
+	<center>
 	<div id="content" style="background-color: #fccfd6; margin-left: 3px; margin-right: 0px; padding-bottom: 8px; padding-left: 8px; padding-right: 8px; padding-top: 8px;">
 <font size = "5">
       The following are two non-programming related projects, but I am passionate about them nonetheless.<br>
@@ -51,7 +52,8 @@
 	<br><br>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/Q0k62MNGR-0" frameborder="0" allowfullscreen></iframe>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/5TyumjNAVws" frameborder="0" allowfullscreen></iframe><br><br>
-	<br><br>	
+	<br><br>
+	</center>
 <div class="MainContainer">
     </div>  
     <div id="MenuContainer">
