--- a/sample.html
+++ b/sample.html
@@ -25,12 +25,12 @@
     </font>
    </div>
 	<table class = "pictures">
-        <th style="align": right>
+        <th style=align: right>
             <img src = "pokecat1_orig.png" width="266.67" height="200" alt="HTML5 Icon">
         </th>
-           <td style= "align": right> <img src = "pokecat2_orig.png" width="266.67" height="200" alt="HTML5 Icon">
+           <td style= align: right> <img src = "pokecat2_orig.png" width="266.67" height="200" alt="HTML5 Icon">
             </td>
-		<td style= "align": right> <img src = "pokecat3_orig.png" width="266.67" height="200" alt="HTML5 Icon">
+		<td style= align: right> <img src = "pokecat3_orig.png" width="266.67" height="200" alt="HTML5 Icon">
 		</td>
 	</table>
     <br>
@@ -41,9 +41,9 @@
 	so contact me if you want to see more!
     </font>
    </div>
-	<br><br>
+	<br><br><br><br>
 	<center>
-	<div id="content" style="background-color: #fccfd6; margin-left: 3px; margin-right: 0px; padding-bottom: 8px; padding-left: 8px; padding-right: 8px; padding-top: 8px;">
+	<div id="content" style="background-color: #fccfd6; margin-left: 10px; margin-right: 0px; padding-bottom: 8px; padding-left: 8px; padding-right: 8px; padding-top: 8px;">
 <font size = "5">
       The following are two non-programming related projects, but I am passionate about them nonetheless.<br>
 	Film is one of my favorite hobbies, so I hope you enjoy!
