--- a/sample.html
+++ b/sample.html
@@ -18,13 +18,14 @@
     <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
   </li>
 </ul>
+	<br>
 	<div id="content" style="background-color: #fccfd6; margin-left: 10px; margin-right: 0px; padding-bottom: 8px; padding-left: 8px; padding-right: 0px; padding-top: 8px;">
 <font size = "5">
       This first project is a side-scroller game I made with a few other students at Tech.<br>
 	Please note that the art is another student's, not mine!
     </font>
    </div>
-	<table class = "pictures">
+	<div id="navbar"><table class = "pictures">
         <th style=align: right>
             <img src = "pokecat1_orig.png" width="266.67" height="200" alt="HTML5 Icon">
         </th>
@@ -33,6 +34,7 @@
 		<td style= align: right> <img src = "pokecat3_orig.png" width="266.67" height="200" alt="HTML5 Icon">
 		</td>
 	</table>
+	</div>
     <br>
 	<div id="content" style="background-color: #fccfd6; margin-left: 10px; margin-right: 0px; padding-bottom: 8px; padding-left: 8px; padding-right: 8px; padding-top: 8px;">
 <font size = "5">
