--- a/sample.html
+++ b/sample.html
@@ -26,12 +26,12 @@
     </font>
    </div>
 	<div id="navbar"><table class = "pictures">
-        <th style=align: right>
+      <th>
             <img src = "pokecat1_orig.png" width="266.67" height="200" alt="HTML5 Icon">
         </th>
-           <td style= align: right> <img src = "pokecat2_orig.png" width="266.67" height="200" alt="HTML5 Icon">
+           <td> <img src = "pokecat2_orig.png" width="266.67" height="200" alt="HTML5 Icon">
             </td>
-		<td style= align: right> <img src = "pokecat3_orig.png" width="266.67" height="200" alt="HTML5 Icon">
+		<td> <img src = "pokecat3_orig.png" width="266.67" height="200" alt="HTML5 Icon">
 		</td>
 	</table>
 	</div>
