--- a/sample.html
+++ b/sample.html
@@ -18,6 +18,7 @@
     <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
   </li>
 </ul>
+	<div id ="container">
 	<br>
 	<div id="content" style="background-color: #fccfd6; margin-left: 10px; margin-right: 0px; padding-bottom: 8px; padding-left: 8px; padding-right: 0px; padding-top: 8px;">
 <font size = "5">
@@ -43,6 +44,7 @@
 	so contact me if you want to see more!
     </font>
    </div>
+	</div>
 	<br><br><br><br>
 	<center>
 	<div id="content" style="background-color: #fccfd6; margin-left: 10px; margin-right: 0px; padding-bottom: 8px; padding-left: 8px; padding-right: 8px; padding-top: 8px;">
